# svc-compliance

./: .cspell.project-words.txt  .env.base  .env.repo  .terraform_init  .tofu_init  CHANGELOG.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  log4rs.yaml
.compose/aetheric-svc/: test-server.yaml
.github/workflows/: post_release.yml  release.yml
client-grpc/: Cargo.toml  README.md
client-grpc/examples/: flightplan.rs  grpc.rs
client-grpc/src/: client.rs  grpc.rs  lib.rs  prelude.rs  service.rs
client-grpc/tests/: integration_test.rs
docs/: conops.md  icd.md  sdd.md
proto/: grpc.proto  svc-compliance-grpc.proto
server/: Cargo.toml  README.md  build.rs
server/src/: config.rs  grpc.rs  lib.rs  main.rs  region_interface.rs
server/src/amqp/: mod.rs  pool.rs
server/src/grpc/: mod.rs  server.rs
server/src/jobs/: corridors.rs  flights.rs  macros.rs  mod.rs  restrictions.rs
server/src/region/: macros.rs  mod.rs  nl.rs  us.rs  utils.rs
server/src/regions/: mod.rs  ne.rs  nl.rs  us.rs
server/tests/: integration_test.rs
