[package]
description = "Arrow compliance service GRPC server"
name        = "svc-compliance"
version     = "0.1.1-develop.3"

categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license-file.workspace = true
repository.workspace   = true

[features]
default          = []
mock             = []
test_util        = ["mock"]
vendored-openssl = ["openssl/vendored"]
# region options, can only activate one
nl = []
us = []
# Will implement mock functions for the server, only use for tests!
mock_server = ["test_util"]

[dependencies]
anyhow          = "1.0"
cargo-husky     = "1"
cfg-if          = "1.0"
chrono          = { version = "0.4", features = ["serde"] }
config          = "0.13"
csv             = "1.2"
dms-coordinates = "1.1"
dotenv          = "0.15"
hyper           = "0.14"
lib-common      = { git = "https://github.com/Arrow-air/lib-common.git", tag = "v0.1.1-develop.2" }
log             = "0.4"
openssl         = "0.10"
prost           = "0.11"
prost-build     = "0.11"
prost-types     = "0.11"
regex           = "1.7"
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
tokio           = { version = "1.28", features = ["full"] }
tokio-util      = "0.7"
tonic           = "0.8"
tonic-health    = "0.8"

[dependencies.log4rs]
features = [
  "background_rotation",
  "rolling_file_appender",
  "json_format",
  "gzip",
]
version = "1.2"

[dev-dependencies]
logtest = "2.0"

[dev-dependencies.cargo-husky]
default-features = false          # Disable features which are enabled by default
features         = ["user-hooks"]
version          = "1"

[build-dependencies]
tonic-build = "0.8"
