[package]
description = "Arrow compliance service gRPC server"
keywords    = ["vtol", "server", "grpc", "compliance"] # max 5
name        = "svc-compliance"
version     = "0.1.1-develop.6"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

[features]
default          = []
dev              = ["test_util"]
test_util        = ["mock", "stub_backends"]
vendored-openssl = ["openssl/vendored"]
# region options, can only activate one
nl = []
us = []
# Will add a 'mock' module for the enabled resources, providing access to mock data generation functions
mock = ["svc-gis-client-grpc/stub_client", "svc-gis-client-grpc/stub_backends"]

# Will use a stubbed backend connection, only use for tests!
stub_backends = []
# Will implement stub functions for the server, only use for tests!
stub_server = ["test_util"]
# Only added to support client-grpc feature when running tests
stub_client = ["stub_backends"]

[dependencies]
anyhow          = "1.0"
cargo-husky     = "1"
cfg-if          = "1.0"
chrono          = { version = "0.4", features = ["serde"] }
config          = "0.13"
csv             = "1.2"
deadpool-lapin  = { version = "0.10", features = ["serde"] }
dms-coordinates = "1.1"
dotenv          = "0.15"
hyper           = "0.14"
lapin           = "2.1"
log             = "0.4"
openssl         = "0.10"
prost           = "0.11"
prost-build     = "0.11"
prost-types     = "0.11"
regex           = "1.7"
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
snafu           = "0.7"
tokio           = { version = "1.28", features = ["full"] }
tokio-util      = "0.7"
tonic           = "0.8"
tonic-health    = "0.8"

[dependencies.lib-common]
features = ["grpc"]
git      = "https://github.com/Arrow-air/lib-common.git"
tag      = "v0.1.1-develop.2"

[dependencies.svc-gis-client-grpc]
git = "https://github.com/Arrow-air/svc-gis.git"
tag = "v0.0.1-develop.6"

[dependencies.log4rs]
features = [
  "background_rotation",
  "rolling_file_appender",
  "json_format",
  "gzip",
]
version = "1.2"

[dev-dependencies]
logtest = "2.0"

[dev-dependencies.cargo-husky]
default-features = false          # Disable features which are enabled by default
features         = ["user-hooks"]
version          = "1"

# Make sure we enable the required modules when running tests
[dev-dependencies.svc-compliance]
features = ["dev"]
path     = "."

[build-dependencies]
tonic-build = "0.8"
